# lmstudio-autoresearch-local

./: .gitignore  AGENTS.md  README.md  check_env.py  debug_chat.py  design.md  levers.py  lm_studio_improvement_plan.md  orchestrator.py  pyproject.toml  requirements.txt  research_history.db  test_explicit_tool.py  test_lm_studio.py  test_lm_studio_fixed.py  test_mcp_integration.py  test_mcp_integration_v2.py  test_mcp_integration_v3.py  test_new_endpoint.py  test_tool.py  train.py  verify_mcp.py
app/: main.py  orchestrator.py
app/models/: schemas.py
app/services/: db_manager.py  lm_studio_client.py  run_manager.py  search_service.py  state_manager.py  state_store.py
docs/superpowers/plans/: 2026-04-26-fix-orchestrator-tools.md  2026-04-26-lmstudio-api-worker-trainpy-implementation-plan.md  2026-04-26-lmstudio-improvement-plan.md
docs/superpowers/specs/: 2026-04-26-lmstudio-api-worker-trainpy-design.md
static/: index.html  script.js  style.css
tests/: conftest.py  test_api.py  test_model_management.py  test_orchestrator.py  test_orchestrator_tools.py  test_run_manager.py  test_services.py  test_state_store.py  test_train_worker.py
